fix(label): fix bug on mobile with gallery links

--- a/src/assets/css/Gallery.scss
+++ b/src/assets/css/Gallery.scss
@@ -186,7 +186,7 @@
 
   @media  screen  and (max-width:900px) {
       .GalleryCard {  
-       &:active {
+       &:active, &:focus {
     
         .GalleryCardText {
           visibility: visible;
