--- a/src/assets/css/InternshipLabel.scss
+++ b/src/assets/css/InternshipLabel.scss
@@ -147,7 +147,7 @@
 }
 
 
-.news .Label {
+.news {
   opacity: 100%;
   animation: news 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both,
     vibrate 1s alternate infinite;
